--- a/helpsettings.ui
+++ b/helpsettings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>478</width>
-    <height>548</height>
+    <width>500</width>
+    <height>650</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,48 +46,7 @@ F11 - Jeden krok</string>
       <string>Ustawienia</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="3" column="0">
-       <widget class="QLabel" name="VolumeSoundL">
-        <property name="text">
-         <string>Głośność generatora:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="VolumeBeepL">
-        <property name="text">
-         <string>Głośność sygnalizatora:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QSlider" name="VolumeBeepS">
-        <property name="maximum">
-         <number>250</number>
-        </property>
-        <property name="value">
-         <number>125</number>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QLineEdit" name="AudioTimerT">
-        <property name="text">
-         <string>20</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="AudioTimerL">
-        <property name="text">
-         <string>Okres timera (ms):</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
+      <item row="7" column="1">
        <widget class="QSlider" name="VolumeSoundS">
         <property name="maximum">
          <number>250</number>
@@ -100,45 +59,93 @@ F11 - Jeden krok</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
+      <item row="9" column="0">
        <widget class="QLabel" name="AudioBufferL">
         <property name="text">
          <string>Długość bufora (smp):</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
+      <item row="7" column="0">
+       <widget class="QLabel" name="VolumeSoundL">
+        <property name="text">
+         <string>Głośność generatora:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QCheckBox" name="ScreenSwap">
+        <property name="text">
+         <string>Zamiana kolorów</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QCheckBox" name="ScreenColors">
+        <property name="text">
+         <string>Kolory</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="0">
        <widget class="QLabel" name="AudioElementL">
         <property name="text">
          <string>Długość elementu (smp):</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
+      <item row="8" column="1">
+       <widget class="QLineEdit" name="AudioTimerT">
+        <property name="text">
+         <string>20</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0">
+       <widget class="QLabel" name="AudioTimerL">
+        <property name="text">
+         <string>Okres timera (ms):</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1">
+       <widget class="QSlider" name="VolumeBeepS">
+        <property name="maximum">
+         <number>250</number>
+        </property>
+        <property name="value">
+         <number>125</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="1">
        <widget class="QLineEdit" name="AudioBufferT">
         <property name="text">
          <string>7000</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="1">
+      <item row="10" column="1">
        <widget class="QLineEdit" name="AudioElementT">
         <property name="text">
          <string>1500</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QCheckBox" name="ScreenNegative">
+      <item row="6" column="0">
+       <widget class="QLabel" name="VolumeBeepL">
         <property name="text">
-         <string>Negatyw</string>
+         <string>Głośność sygnalizatora:</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QCheckBox" name="ScreenColors">
+      <item row="2" column="0">
+       <widget class="QCheckBox" name="ScreenNegative">
         <property name="text">
-         <string>Kolory</string>
+         <string>Negatyw</string>
         </property>
        </widget>
       </item>
@@ -198,6 +205,22 @@ F11 - Jeden krok</string>
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>ScreenNegative</tabstop>
+  <tabstop>ScreenColors</tabstop>
+  <tabstop>ScreenSwap</tabstop>
+  <tabstop>VolumeBeepS</tabstop>
+  <tabstop>VolumeSoundS</tabstop>
+  <tabstop>AudioTimerT</tabstop>
+  <tabstop>AudioBufferT</tabstop>
+  <tabstop>AudioElementT</tabstop>
+  <tabstop>DebugTrace</tabstop>
+  <tabstop>DebugSaveFile</tabstop>
+  <tabstop>DebugReg0</tabstop>
+  <tabstop>DebugReg1</tabstop>
+  <tabstop>DebugReg3</tabstop>
+  <tabstop>DebugReg2</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
