--- a/helpsettings.ui
+++ b/helpsettings.ui
@@ -205,47 +205,60 @@ F11 - Jeden krok</string>
       <string>Rejestrowanie pracy</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="6" column="0">
-       <widget class="QCheckBox" name="DebugReg3">
-        <property name="text">
-         <string>Rejestry IX,IY,SP</string>
-        </property>
-       </widget>
-      </item>
       <item row="4" column="0">
        <widget class="QCheckBox" name="DebugReg1">
         <property name="text">
-         <string>Rejestry AFBCDEHL główne</string>
+         <string>R. Główne</string>
         </property>
        </widget>
+      </item>
+      <item row="8" column="0">
+       <widget class="QLineEdit" name="DebugTraceRange1T"/>
       </item>
       <item row="0" column="0">
        <widget class="QCheckBox" name="DebugTrace">
         <property name="text">
-         <string>Rejestrowanie rozkazów</string>
+         <string>Rozkazy</string>
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
-       <widget class="QCheckBox" name="DebugReg4">
-        <property name="text">
-         <string>Rejestry I,R</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
+      <item row="4" column="1">
        <widget class="QCheckBox" name="DebugReg2">
         <property name="text">
-         <string>Rejestry AFBCDEHL dodatkowe</string>
+         <string>R. dodatkowe</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="6" column="1">
+       <widget class="QCheckBox" name="DebugReg4">
+        <property name="text">
+         <string>I,R</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0" colspan="2">
+       <widget class="QLabel" name="DebugTraceRangeL">
+        <property name="text">
+         <string>Zakres adresów (hex):</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QCheckBox" name="DebugReg3">
+        <property name="text">
+         <string>IX,IY,SP</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
        <widget class="QCheckBox" name="DebugReg0">
         <property name="text">
          <string>Pamięć</string>
         </property>
        </widget>
+      </item>
+      <item row="8" column="1">
+       <widget class="QLineEdit" name="DebugTraceRange2T"/>
       </item>
      </layout>
     </widget>
@@ -261,7 +274,6 @@ F11 - Jeden krok</string>
   <tabstop>AudioTimerT</tabstop>
   <tabstop>AudioBufferT</tabstop>
   <tabstop>AudioElementT</tabstop>
-  <tabstop>DebugReg0</tabstop>
   <tabstop>DebugReg3</tabstop>
  </tabstops>
  <resources/>
