--- a/helpsettings.ui
+++ b/helpsettings.ui
@@ -205,37 +205,6 @@ F11 - Jeden krok</string>
       <string>Rejestrowanie pracy</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="4" column="0">
-       <widget class="QCheckBox" name="DebugReg1">
-        <property name="text">
-         <string>R. główne</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="0">
-       <widget class="QLineEdit" name="DebugTraceRange1T"/>
-      </item>
-      <item row="0" column="0">
-       <widget class="QCheckBox" name="DebugTrace">
-        <property name="text">
-         <string>Rozkazy</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QCheckBox" name="DebugReg2">
-        <property name="text">
-         <string>R. dodatkowe</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1">
-       <widget class="QCheckBox" name="DebugReg4">
-        <property name="text">
-         <string>I,R</string>
-        </property>
-       </widget>
-      </item>
       <item row="7" column="0" colspan="2">
        <widget class="QLabel" name="DebugTraceRangeL">
         <property name="sizePolicy">
@@ -249,13 +218,6 @@ F11 - Jeden krok</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
-       <widget class="QCheckBox" name="DebugReg3">
-        <property name="text">
-         <string>IX,IY,SP</string>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="1">
        <widget class="QCheckBox" name="DebugReg0">
         <property name="text">
@@ -263,8 +225,60 @@ F11 - Jeden krok</string>
         </property>
        </widget>
       </item>
+      <item row="6" column="1">
+       <widget class="QCheckBox" name="DebugReg4">
+        <property name="text">
+         <string>I,R</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0">
+       <widget class="QLineEdit" name="DebugTraceRange1T"/>
+      </item>
+      <item row="4" column="1">
+       <widget class="QCheckBox" name="DebugReg2">
+        <property name="text">
+         <string>R. dodatkowe</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QCheckBox" name="DebugTrace">
+        <property name="text">
+         <string>Rozkazy</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QCheckBox" name="DebugReg3">
+        <property name="text">
+         <string>IX,IY,SP</string>
+        </property>
+       </widget>
+      </item>
       <item row="8" column="1">
        <widget class="QLineEdit" name="DebugTraceRange2T"/>
+      </item>
+      <item row="4" column="0">
+       <widget class="QCheckBox" name="DebugReg1">
+        <property name="text">
+         <string>R. główne</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="0">
+       <widget class="QCheckBox" name="DebugDisk">
+        <property name="text">
+         <string>Dyski twarde</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="1">
+       <widget class="QCheckBox" name="DebugDiskCmd">
+        <property name="text">
+         <string>Komendy ATA</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
